[gd_scene load_steps=24 format=2]

[ext_resource path="res://Cutscenes/CutsceneG.gd" type="Script" id=1]
[ext_resource path="res://assets/wall/bg_forest.png" type="Texture" id=2]
[ext_resource path="res://assets/items/grandma_gun.png" type="Texture" id=3]
[ext_resource path="res://Items/GroundPiece.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/items/grandma.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 32, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 128, 32, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 128, 32, 64 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "gunback",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 5 ), SubResource( 4 ), SubResource( 10 ), SubResource( 3 ), SubResource( 2 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 1 ) ],
"loop": false,
"name": "gunning",
"speed": 5.0
} ]

[sub_resource type="Animation" id=17]
resource_name = "coming"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -152, 296 ), Vector2( 200, 296 ) ]
}

[node name="CutsceneG" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -216.0
margin_top = 8.0
margin_right = 2348.0
margin_bottom = 488.0
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decors" type="Node2D" parent="."]
position = Vector2( -32, -8 )

[node name="GroundPiece" parent="Decors" instance=ExtResource( 5 )]
position = Vector2( -144, 344 )

[node name="GroundPiece2" parent="Decors" instance=ExtResource( 5 )]
position = Vector2( -48, 344 )

[node name="GroundPiece3" parent="Decors" instance=ExtResource( 5 )]
position = Vector2( 48, 344 )

[node name="GroundPiece4" parent="Decors" instance=ExtResource( 5 )]
position = Vector2( 144, 344 )

[node name="GroundPiece5" parent="Decors" instance=ExtResource( 5 )]
position = Vector2( 240, 344 )

[node name="GroundPiece6" parent="Decors" instance=ExtResource( 5 )]
position = Vector2( 336, 344 )

[node name="GroundPiece7" parent="Decors" instance=ExtResource( 5 )]
position = Vector2( 432, 344 )

[node name="GroundPiece8" parent="Decors" instance=ExtResource( 5 )]
position = Vector2( 528, 344 )

[node name="GroundPiece9" parent="Decors" instance=ExtResource( 5 )]
position = Vector2( 624, 344 )

[node name="GroundPiece10" parent="Decors" instance=ExtResource( 5 )]
position = Vector2( 720, 344 )

[node name="Actors" type="Node2D" parent="."]
position = Vector2( 48, -16 )

[node name="Grandma" type="AnimatedSprite" parent="Actors"]
position = Vector2( 408, 304 )
frames = SubResource( 16 )
animation = "gunback"

[node name="Player" parent="Actors" instance=ExtResource( 6 )]
position = Vector2( -152, 296 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Actors/Player"]
anims/coming = SubResource( 17 )

[node name="Display" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Display"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 16.0142, 0.702249 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Display"]
margin_top = 336.0
margin_right = 40.0
margin_bottom = 376.0
rect_scale = Vector2( 16.0142, 0.702249 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Display"]
margin_left = 200.0
margin_top = 344.0
margin_right = 440.0
margin_bottom = 358.0
text = "HELP!!!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrandmaFlipTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ConvoTimer" type="Timer" parent="."]
wait_time = 1.7
[connection signal="timeout" from="GrandmaFlipTimer" to="." method="_on_GrandmaFlipTimer_timeout"]
[connection signal="timeout" from="ConvoTimer" to="." method="_on_ConvoTimer_timeout"]
